# digikam-plugins-demo

./: CMakeLists.txt  README.md  bootstrap.sh  helloworldtoolplugin.cpp  helloworldtoolplugin.h
bqm/: CMakeLists.txt  helloworld.cpp  helloworld.h  helloworldbqmplugin.cpp  helloworldbqmplugin.h
bqm/i18n/: es.ts
cmake/modules/: MacroInstall.cmake  MacroUninstall.cmake  i18nUtils.cmake
cmake/templates/: target.uninstall.cmake.in_cmake
common/: i18nutils.h
editor/: CMakeLists.txt  helloworldeditorplugin.cpp  helloworldeditorplugin.h
editor/i18n/: de.ts  i18n_list.cmake
generic/: CMakeLists.txt  helloworldgenericplugin.cpp  helloworldgenericplugin.h
generic/i18n/: fr.ts
imageeditor/: CMakeLists.txt
rawimport/: CMakeLists.txt  helloworldrawimportplugin.cpp  helloworldrawimportplugin.h
rawimport/i18n/: i18n_list.cmake  it.ts
